--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,22 @@ logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 #spring.mvc.view.prefix=/templates
 #spring.mvc.view.suffix=.html
 #spring.mvc.static-path-pattern=/**
+#spring.mvc.resources.static-locations=classpath:../resources/templates/
+
+# 默认值为 classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+spring.resources.static-locations=classpath:../resources/templates/
+spring.mvc.view.suffix=.html
+
+##thymeleaf start
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.servlet.content-type=text/html
+##开发时关闭缓存,不然没法看到实时页面
+#spring.thymeleaf.cache=false
+##其实重要的就是prefix，因为放到tomat里面之后，
+##Thymeleaf  就找不到默认的templates 模板路径了
+#spring.thymeleaf.prefix= classpath:../resources/templates/
+#spring.thymeleaf.suffix= .html
+##thymeleaf end
+
+
