--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
+        //springBootVersion = '2.0.6.RELEASE'
         springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
         mavenCentral()
-
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     }
 //    repositories {
 //        mavenLocal()
@@ -16,13 +17,12 @@ buildscript {
 
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-
     }
 
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -40,5 +40,5 @@ dependencies {
     implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
     runtimeOnly('mysql:mysql-connector-java')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-    //compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 }
