--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 spring.resources.static-locations=classpath:../resources/templates/
 spring.mvc.view.suffix=.html
 
-##thymeleaf start
+##thymeleaf start--全部使用默认值，不需要设置
 #spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.servlet.content-type=text/html
