--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 #参考：https://blog.csdn.net/tr1912/article/details/79371137
 #tomcat端口
 server.port=8000
-spring.datasource.url=jdbc:mysql://localhost:3306/test-ssm?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://47.105.36.94:3308/test-ssm?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database = mysql
 #Mybatis扫描（如果用注解的方式，则不需要在此配置）
 mybatis.mapper-locations=classpath:../resources/*.xml
 #起别名。可省略写mybatis的xml中的resultType的全路径
-#mybatis.type-aliases-package=com.zlh.demo_springboot_ssm.mapper
+mybatis.type-aliases-package=com.zlh.demo_springboot_ssm.mapper
 
 
 #################################################日志####################################################
