验证mybatis多表联查（1对多）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database = mysql
-#Mybatis扫描（如果用注解的方式，则不需要在此配置）
-mybatis.mapper-locations=classpath:../resources/*.xml
+#Mybatis扫描（如果用注解的方式，则不需要在此配置）必须添加上*Mapper.xml，如果有其他xml文件则会报错！！
+mybatis.mapper-locations=classpath*:../../resources/main/*Mapper.xml
 #起别名。可省略写mybatis的xml中的resultType的全路径
 mybatis.type-aliases-package=com.zlh.demo_springboot_ssm.mapper
 
