--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ mybatis.type-aliases-package=com.zlh.demo_springboot_ssm.mapper
 #com.mycompany.mavenspringboot.controller 日志 WARN级别输出
 #logging.level.com.zlh.demo_springboot_ssm.controller=WARN
 #com.mycompany.mavenspringboot.mapper sql日志 DEBUG级别输出
-logging.level.com.zlh.demo_springboot_ssm.mapper=DEBUG
-logging.file=logs/spring-boot-logging.log
-logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
-logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
+#logging.level.com.zlh.demo_springboot_ssm.mapper=DEBUG
+#logging.file=logs/spring-boot-logging.log
+#logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+#logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
 
 #视图层控制
