--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,10 @@ buildscript {
         springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
-        mavenCentral()
-        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        //mavenCentral()
+        maven {
+            url 'https://maven.aliyun.com/repository/central/'
+        }
     }
 //    repositories {
 //        mavenLocal()
@@ -30,14 +32,20 @@ version = '1.0.0'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    //mavenCentral()
+    maven {
+        url 'https://maven.aliyun.com/repository/central/'
+    }
 }
 
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+    implementation('org.aspectj:aspectjrt:1.9.6')
+    implementation('org.aspectj:aspectjweaver:1.9.6')
     runtimeOnly('mysql:mysql-connector-java')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation group: 'org.apache.activemq', name: 'activemq-client', version: '5.15.0'
 }
